--- a/src/main/resources/templates/yanbog/generate-geotests.html
+++ b/src/main/resources/templates/yanbog/generate-geotests.html
@@ -32,22 +32,22 @@
 				
 				<div class="form-group">
 					<label for="input-produto-nome">AFrame (order nº i.e.: 2700000)</label> 
-					<input id="aframe" oninvalid="this.setCustomValidity('This field must be filled with integer numbers')" oninput="this.setCustomValidity('')" type="text" required="required" name="numbers" pattern="[0-9]+$" class="form-control" placeholder="0" th:field="*{orderInsertAframe}" />
+					<input id="aframe" oninvalid="this.setCustomValidity('This field must be filled with integer numbers')" oninput="this.setCustomValidity('')" type="text" required="required" name="numbers" pattern="[0-9]+$" class="form-control" placeholder="0" th:field="*{orderInsertAframeGeoTests}" />
 				</div>
 
 				<div class="form-group">
 					<label for="input-produto-nome">Pbl] (order nº i.e.: 2800000)</label> 
-					<input id="pblup" oninvalid="this.setCustomValidity('This field must be filled with integer numbers')" oninput="this.setCustomValidity('')" type="text" required="required" name="numbers" pattern="[0-9]+$" class="form-control" placeholder="0" th:field="*{orderInsertPblUp}" />
+					<input id="pbl" oninvalid="this.setCustomValidity('This field must be filled with integer numbers')" oninput="this.setCustomValidity('')" type="text" required="required" name="numbers" pattern="[0-9]+$" class="form-control" placeholder="0" th:field="*{orderInsertPblGeoTests}" />
 				</div>
 
 				<div class="form-group">
 					<label for="input-produto-nome">Pdc (order nº i.e.: 2900000)</label> 
-					<input id="pbldown" oninvalid="this.setCustomValidity('This field must be filled with integer numbers')" oninput="this.setCustomValidity('')" type="text" required="required" name="numbers" pattern="[0-9]+$" class="form-control" placeholder="0" th:field="*{orderInsertPblDown}" />
+					<input id="pdc" oninvalid="this.setCustomValidity('This field must be filled with integer numbers')" oninput="this.setCustomValidity('')" type="text" required="required" name="numbers" pattern="[0-9]+$" class="form-control" placeholder="0" th:field="*{orderInsertPdcGeoTests}" />
 				</div>
 
 
 				<div class="form-group">
-					<button class="btn btn-primary" type="submit" name="generate_orders">Create and Send Files to Host</button>
+					<button class="btn btn-primary" type="submit" name="generate_geotests">Create and Send Files to Host</button>
 				</div>
 
 			</form>
@@ -56,12 +56,8 @@
 			<script type="text/javascript"> 
 					document.getElementById("host").setAttribute('value','10.34.234.2');		
 					document.getElementById("aframe").setAttribute('value','0');
-  					document.getElementById("pblup").setAttribute('value','0');
-  					document.getElementById("pbldown").setAttribute('value','0');
-  					document.getElementById("pblmix").setAttribute('value','0');
+  					document.getElementById("pbl").setAttribute('value','0');
   					document.getElementById("pdc").setAttribute('value','0');
-  					document.getElementById("prize").setAttribute('value','0');
-  					document.getElementById("mix").setAttribute('value','0');  					
 			</script>
 			
 		</div>
